# lawfare

./: .pre-commit-config.yaml  README.md
backend/: pyproject.toml
