[tool.poetry]
name = "lawfare"
version = "0.1.0"
description = ""
authors = ["Solo Dolley <solodolley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
